--- a/style/style.css
+++ b/style/style.css
@@ -60,6 +60,22 @@ body{
     font-family: 'Poppins',sans-serif;
 }
 
+.tasks button #sort{
+    position: relative;
+    float: right;
+    font-weight: 500;
+    font-size: 16px;
+    background-color: #0d75ec;
+    border: none;
+    color: #ffffff;
+    cursor: pointer;
+    outline: none;
+    width: 20%;
+    height: 45px;
+    border-radius: 5px;
+    font-family: 'Poppins',sans-serif;
+}
+
 #display{
     border-radius: 10px;
     width: 100%;
